overflow on messages fix

--- a/static/css/messages.css
+++ b/static/css/messages.css
@@ -57,9 +57,9 @@ body {
     width: 100%;
     height: 67vh;
     margin: auto;
-    /*overflow: scroll;
-    */overflow-anchor: none;
-    overflow-x: scroll;
+    /* overflow-anchor: none; */
+    overflow-y: scroll;
+    overflow-x: hidden;
     background-color: var(--filler);
     padding: 8px;
     border-radius: 12px;
